# lean-init

./: .gitignore  Pipfile  README.md  build  hatch.toml  pyproject.toml
.github/workflows/: workflow.yml
examples/basic/: CMakeLists.txt  Pipfile  buildit  expected_output.txt  expected_output.txt.sha256sum  litex.cmake  mytest.robot  nucleo-u5a5zj-q.cmake  testit  timestamp
examples/basic/cmake/: generic_binary.cmake  git_version.cmake
examples/basic/include/: error.h  leaninit.h  util.h
examples/whole_fw/: Pipfile  buildit  buildit_env  expected_output.txt  testit_env
examples/whole_fw/cmake/: generic_binary.cmake
examples/whole_fw/include/: ui.h
examples/whole_fw/source/: leaninit.c  main.c
include/: leaninit.h
leaninit/: cli.py  elf.py  lz4l.py
